typecheck/tests/micro/good/identifier.c
//identifier
void main(void)
{
	int i;
	i;
return;
}
