typecheck/tests/micro/bad/forward_ref.c

int main(void){
	f(); //no definition for f found
return 0;
}
